// Vitest Snapshot v1

exports[`Toast System > should display a success toast using a button click and match the snapshot 1`] = `
<DocumentFragment>
  <div>
    Test App
  </div>
  <button>
    Show Info Toast
  </button>
  <button>
    Show Success Toast
  </button>
  <div
    id="alert-container"
  >
    <div
      id="toast-qihox1nex"
    />
  </div>
</DocumentFragment>
`;

exports[`Toast System > should display an info toast using a button click and match the snapshot 1`] = `
<DocumentFragment>
  <div>
    Test App
  </div>
  <button>
    Show Info Toast
  </button>
  <button>
    Show Success Toast
  </button>
  <div
    id="alert-container"
  >
    <div
      id="toast-n4pgftrw3z"
    />
  </div>
</DocumentFragment>
`;
